perf: execute NumPy parity optimization plan
Add the full operation matrix and cross-JDK receipts, preserve exact reduction semantics while exposing ILP, eliminate per-element mutable dispatch, and record the measured Vector API and Gale FFM decisions.